<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.AddActivity">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_ed_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginStart="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_22sdp"
            android:textSize="@dimen/_16sdp"
            android:hint="@string/date"
            android:gravity="center"/>

        <LinearLayout
            android:id="@+id/add_linear"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_customerName"
                android:layout_width="@dimen/_70sdp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_1sdp"
                android:layout_marginEnd="@dimen/_1sdp"
                android:layout_marginBottom="@dimen/_1sdp"
                android:hint="@string/customer_name"
                android:textColorHint="@color/white"
                android:background="@color/red"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_cup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/cup"
                android:hint="@string/cup"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_aryw"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/aryw"
                android:gravity="center"
                android:hint="@string/aryw"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_afyn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="number"
                android:layout_weight="1"
                android:hint="@string/avene"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/afyn"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_rws"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/rws"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/rws"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_hibard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/hibard"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/hibard"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_ayar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="number"
                android:hint="@string/ayar"
                android:layout_margin="@dimen/_1sdp"
                android:background="@color/ayar"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/white"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_note1"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_margin="@dimen/_1sdp"
                android:layout_weight="1"
                android:hint="@string/note1"
                android:background="@color/note1"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/add_ed_note2"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:hint="@string/note2"
                android:layout_margin="@dimen/_1sdp"
                android:layout_weight="1"
                android:background="@color/note2"
                android:gravity="center"
                android:padding="@dimen/_1sdp"
                android:textColor="@color/black"
                android:textSize="@dimen/_10ssp"
                android:textStyle="bold" />
        </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/add_but_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_32sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginEnd="@dimen/_32sdp"
                app:cornerRadius="@dimen/_8sdp"
                android:textAllCaps="false"
                android:text="@string/add"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />



    </LinearLayout>
</layout>